// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenResponsesLanguageModel > doGenerate > basic generation > should produce correct content 1`] = `
[
  {
    "text": "reasoning content",
    "type": "reasoning",
  },
  {
    "text": "text content",
    "type": "text",
  },
]
`;

exports[`OpenResponsesLanguageModel > doGenerate > basic generation > should send correct request body 1`] = `
{
  "input": [
    {
      "content": [
        {
          "text": "Hello",
          "type": "input_text",
        },
      ],
      "role": "user",
      "type": "message",
    },
  ],
  "model": "gemma-7b-it",
}
`;

exports[`OpenResponsesLanguageModel > doGenerate > request parameters > should send correct request body 1`] = `
{
  "input": [
    {
      "content": [
        {
          "text": "Hello",
          "type": "input_text",
        },
      ],
      "role": "user",
      "type": "message",
    },
  ],
  "max_output_tokens": 100,
  "model": "gemma-7b-it",
  "temperature": 0.5,
}
`;
